--- a/silver_isp/views/isp_olt_views.xml
+++ b/silver_isp/views/isp_olt_views.xml
@@ -7,7 +7,6 @@
             <field name="res_model">isp.olt</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <menuitem id="menu_isp_olt" name="Equipos OLT" parent="menu_silver_isp_root" action="action_isp_olt" sequence="30"/>
 
         <record id="view_isp_olt_tree" model="ir.ui.view">
             <field name="name">isp.olt.tree</field>
@@ -15,8 +14,8 @@
             <field name="arch" type="xml">
                 <tree string="Equipos OLT ISP" default_order="name desc">
                     <field name="name"/>
-                    <field name="brand_olt_id"/>
-                    <field name="model_olt"/>
+                    <field name="brand_id"/>
+                    <field name="model"/>
                     <field name="ip_olt"/>
                     <field name="port_olt"/>
                     <field name="user_olt"/>
@@ -63,8 +62,8 @@
                                 <field name="node_id"/>
                             </group>
                             <group>
-                                <field name="brand_olt_id"/>
-                                <field name="model_olt"/>
+                                <field name="brand_id"/>
+                                <field name="model"/>
                                 <field name="num_slot_olt"/>
                             </group>
                         </group>
@@ -85,7 +84,105 @@
                         </group>
                         <notebook colspan="4">
                             <page name="config" string="Configuraciones Generales">
-                                <!-- Content for this page -->
+                             <group string="Tipo de Conexion">
+<group id="config1">
+
+<field name="is_pppoe" widget="boolean_toggle" on_change="1" modifiers="{}"/>
+<field name="is_ipoe" widget="boolean_toggle" on_change="1" modifiers="{}"/>
+<field name="is_mgn_service_port" widget="boolean_toggle" modifiers="{}"/>
+<field name="ges_gemport" invisible="is_mgn_service_port == False"/>
+<field name="g_name_service" invisible="is_mgn_service_port == False"/>
+<field name="is_custom_tcont" widget="boolean_toggle" modifiers="{}"/>
+<field name="tcont" invisible="is_custom_tcont == False"/>
+<field name="is_custom_gempor" widget="boolean_toggle" modifiers="{}"/>
+<field name="gemport" invisible="is_custom_gempor == False"/>
+
+<field name="is_line_nap" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_gestion_pppoe" widget="boolean_toggle" modifiers="{}"/>
+</group>
+<group id="config2">
+ <field name="is_extract_mac_onu" widget="boolean_toggle" modifiers="{}"/>
+ <field name="is_control_mac_learn" widget="boolean_toggle" modifiers="{}"/>
+ <field name="is_activation_bridge" widget="boolean_toggle" modifiers="{}"/>
+
+<field name="is_cutoff_reconnection" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_disable_onu" widget="boolean_toggle" invisible="is_cutoff_reconnection == False"/>
+<field name="is_shutdown_interface" widget="boolean_toggle" invisible="is_cutoff_reconnection == False"/>
+<field name="is_cutoff_port" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_reduce_script" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_redirect_srvport" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_active_wan_onu" widget="boolean_toggle" modifiers="{}"/>
+</group>
+</group>
+<group>
+<group id="config3">
+
+<field name="ont_srvprofile" modifiers="{}"/>
+<field name="ont_srvprofile_value" invisible="ont_srvprofile == 'idp'"/>
+<field name="ont_lineprofile" modifiers="{}"/>
+<field name="ont_lineprofile_value" invisible="ont_lineprofile != 'idu'"/>
+<field name="send_srvprofile" widget="boolean_toggle" modifiers="{}"/>
+<field name="port_vlan" widget="boolean_toggle" invisible="is_vsol_marca == False"/>
+<field name="wan_maximum" widget="boolean_toggle" invisible="is_vsol_marca == False"/>
+<field name="name_service" invisible="is_vsol_marca == False"/>
+</group>
+<group id="config4">
+<field name="type_access_net" modifiers="{&quot;required&quot;: true}"/>
+<field name="dhcp_custom_server" invisible="type_access_net != 'dhcp_leases'"/>
+
+<field name="traffic_table" modifiers="{}"/>
+<field name="is_control_traffic_profile" widget="boolean_toggle" invisible="is_brand_zte == False"/>
+<field name="is_not_user_encap_ipoe" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_uplink_port_vlan" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_product_vlan" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_custom_pon_vlan" widget="boolean_toggle" modifiers="{}"/>
+<field name="service_port_internet" invisible="is_vsol_marca == False"/>
+</group>
+</group>
+<group string="Ancho de Banda" invisible="description != 'vsol'">
+<field name="description" invisible="1" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
+<field name="is_control_bandwidth" widget="boolean_toggle" modifiers="{}"/>
+<field name="is_control_upstream" widget="boolean_toggle" invisible="is_control_bandwidth == False"/>
+</group>
+<group string="VSOL Profiles">
+<group>
+<field name="profile_onu_generic" modifiers="{}"/>
+<field name="profile_dba_gestion" modifiers="{}"/>
+<field name="profile_dba_internet" modifiers="{}"/>
+</group>
+<group>
+<field name="dhcp_client" widget="boolean_toggle" invisible="1" modifiers="{&quot;invisible&quot;: true}"/>
+<field name="is_serial_onu_hex" widget="boolean_toggle" on_change="1" modifiers="{}"/>
+<field name="is_serial_onu_ascii" widget="boolean_toggle" on_change="1" modifiers="{}"/>
+</group>
+</group>
+<group>
+<group>
+<field name="is_virtual" widget="boolean_toggle" modifiers="{}"/>
+</group>
+<group>
+<field name="core_brand_description" invisible="1" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
+<field name="isp_core_port_line_id" options="{'no_create': True,  'no_open': True}" invisible="core_brand_description != 'hua'" can_create="true" can_write="true"/>
+</group>
+</group>
+<group name="olt_tr">
+<group string="TR-069">
+<field name="is_active_tr" widget="boolean_toggle" modifiers="{}"/>
+</group>
+<group string="DNS" invisible="is_v2_brand_zte == False">
+<field name="is_v2_brand_zte" invisible="1" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
+<field name="primary_dns" modifiers="{}"/>
+<field name="secondary_dns" modifiers="{}"/>
+</group>
+</group>
+<group>
+<group string="Configuracion OLT">
+<field name="is_write_olt" widget="boolean_toggle" modifiers="{}"/>
+</group>
+<group string="Configuracion ONT" invisible="description != 'zte'">
+<field name="is_enable_remote_access_onu" widget="boolean_toggle" modifiers="{}"/>
+</group>
+</group>
                             </page>
                         </notebook>
                     </sheet>
