--- a/silver_isp/views/isp_olt_card_port_views.xml
+++ b/silver_isp/views/isp_olt_card_port_views.xml
@@ -46,7 +46,7 @@
                         <div class="oe_title">
                             <h1><field name="name" readonly="1"/></h1>
                         </div>
-                        <group name="port_olt">
+                        <group name="port">
                             <group>
                                 <field name="num_port"/>
                             </group>
