--- a/silver_isp/views/isp_ap_views.xml
+++ b/silver_isp/views/isp_ap_views.xml
@@ -36,8 +36,8 @@
                     <sheet string="Equipo AP ISP">
                         <div class="oe_button_box" name="button_box">
                             <button name="action_connect_ap" type="object" class="oe_stat_button" icon="fa-signal" string="Probar Conexion" invisible="description_brand != 'mk'"/>
-                            <button class="oe_stat_button" type="action" name="%(action_isp_placeholder)d" icon="fa-arrows-v">
-                                <field string="Contratos" name="capacity_usage_ap" widget="statinfo"/>
+                            <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-arrows-v">
+                                <field string="Contratos" name="contract_count" widget="statinfo"/>
                             </button>
                         </div>
                         <widget name="web_ribbon" title="Active" invisible="state == 'down' or description_brand != 'mk'"/>
