--- a/silver_isp/views/isp_node_views.xml
+++ b/silver_isp/views/isp_node_views.xml
@@ -31,19 +31,19 @@
                 <form string="Nodo ISP">
                     <header>
                         <button name="create_core" string="Crear Equipo Core" type="object" invisible="1"/>     
-                        <button name="action_create_ticket_node" string="Crear Ticket" icon="fa-ticket" type="object" class="oe_highlight"/>
+                        <!--button name="action_create_ticket_node" string="Crear Ticket" icon="fa-ticket" type="object" class="oe_highlight"/-->
                         <button name="create_olt" string="Crear Equipo Olt" type="object"/>
                     </header>
                     <sheet string="Nodo ISP">
                         <div class="oe_button_box" name="button_box"> 
-                            <button class="oe_stat_button" type="action" name="%(action_isp_placeholder)d" icon="fa-arrows-v">
+                            <button class="oe_stat_button" type="object" name="action_view_cores" icon="fa-arrows-v">
                                 <field string="Equipos Core" name="core_count" widget="statinfo"/>
                             </button>   
-                            <button class="oe_stat_button" type="action" name="%(action_isp_placeholder)d" icon="fa-ticket">
+                            <!--button class="oe_stat_button" type="object" name="action_view_support_tickets" icon="fa-ticket">
                                 <field string="Tickets" name="support_ticket_count" widget="statinfo"/>
-                            </button> 
+                            </button-->
                             <button class="oe_stat_button" type="action" name="%(stock.action_picking_tree_all)d" icon="fa-arrows-v">
-                                <field string="Movimientos" name="stock_picking_count" widget="statinfo"/>
+                                <!--field string="Movimientos" name="stock_picking_count" widget="statinfo"/-->
                             </button>
                             <button class="oe_stat_button" type="object" name="action_search_view_olts" icon="fa-arrows-v">
                                 <field string="Equipos Olt" name="olt_count" widget="statinfo"/>
@@ -84,6 +84,9 @@
                                         <field name="distance"/>
                                     </group>
                                 </group>
+                            </page>
+                            <page name="map_view" string="Mapa">
+                                <field name="id" class="map-field" widget="node_map"/>
                             </page>
                         </notebook>
                     </sheet>
