--- a/silver_isp/views/isp_olt_views.xml
+++ b/silver_isp/views/isp_olt_views.xml
@@ -34,12 +34,12 @@
                     </header>
                     <sheet string="Equipo OLT ISP">
                         <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="action" name="%(action_isp_placeholder)d" icon="fa-arrows-v">
+                            <button class="oe_stat_button" type="object" name="action_view_olt_cards" icon="fa-arrows-v">
                                 <field string="Tarjetas OLT" name="olt_card_count" widget="statinfo"/>
                             </button>
                             <button name="action_connect_olt" type="object" class="oe_stat_button" icon="fa-signal" string="Probar Conexion"/>
                             <button name="action_create_profile_olt" type="object" class="oe_stat_button" icon="fa-arrows-v" string="Crear Perfiles"/>
-                            <button class="oe_stat_button" type="action" name="%(action_isp_placeholder)d" icon="fa-link">
+                            <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-link">
                                 <field string="Contratos" name="contracts_olt_count" widget="statinfo"/>
                             </button>
                         </div>
