--- a/silver_isp/views/isp_splitter_views.xml
+++ b/silver_isp/views/isp_splitter_views.xml
@@ -14,7 +14,7 @@
             <field name="arch" type="xml">
                 <tree string="Splitter" default_order="name desc">
                     <field name="name"/>
-                    <field name="name_sppliter"/>
+                    <field name="name"/>
                     <field name="capacity_splitter"/>
                     <field name="port_splitter"/>
                     <field name="type_splitter"/>
@@ -34,10 +34,10 @@
                     </header>
                     <sheet string="Splitter">
                         <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="action" name="%(action_isp_placeholder)d" icon="fa-arrows-v">
+                            <button class="oe_stat_button" type="object" name="action_view_boxes" icon="fa-arrows-v">
                                 <field string="Cajas NAP" name="box_count" widget="statinfo"/>
                             </button>
-                            <button class="oe_stat_button" type="action" name="%(action_isp_placeholder)d" icon="fa-link" invisible="type_splitter != '2'">
+                            <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-link" invisible="type_splitter != '2'">
                                 <field string="Contratos" name="contracts_count" widget="statinfo"/>
                             </button>
                         </div>
@@ -46,7 +46,7 @@
                         </div>
                         <group>
                             <group>
-                                <field name="name_sppliter" invisible="type_splitter != '2'"/>
+                                <field name="name" invisible="type_splitter != '2'"/>
                                 <field name="capacity_splitter"/>
                                 <field name="port_splitter" invisible="type_splitter == '1'"/>
                             </group>
