--- a/silver_isp/static/src/css/general.css
+++ b/silver_isp/static/src/css/general.css
@@ -5,3 +5,37 @@
     background-color: white;
     box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
+
+
+.o_form_button_save::after {
+    content: "Guardar";
+    padding: 2px;
+
+}
+
+.o_form_button_save {
+    font-size: 15px;
+    background-color: rgb(93, 141, 168);
+    color: #fff;
+    border: 1px solid #ddd;
+}
+
+.o_form_button_cancel::after {
+    content: "Descartar";
+    padding: 2px;
+
+}
+
+.o_form_button_cancel {
+    font-size: 15px;
+    background-color: #dee2e6;
+    color: #000;
+    border: 1px solid #ddd;
+
+}
+
+
+.botones-right {
+    position: absolute;
+    right: 0;
+}
