--- a/silver_isp/views/isp_box_views.xml
+++ b/silver_isp/views/isp_box_views.xml
@@ -27,34 +27,95 @@
             <field name="name">isp.box.form</field>
             <field name="model">isp.box</field>
             <field name="arch" type="xml">
-                <form string="Caja Nap ISP">
-                    <sheet string="Caja NAP ISP">
-                        <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-arrows-v">
+            <form string="Caja Nap ISP">
+<sheet string="Caja NAP ISP">
+<div class="oe_button_box" name="button_box"> 
+ <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-arrows-v">
                                 <field string="Contratos" name="contract_count" widget="statinfo"/>
                             </button>
-                        </div>
-                        <div class="oe_title">
-                            <h1><field name="name" placeholder="Nombre Caja NAP"/></h1>
-                        </div>
-                        <group>
-                            <group string="Datos">
-                                <field name="port_splitter_secondary"/>
-                                <field name="splitter_id" readonly="1"/>
-                                <field name="node_id" invisible="1"/>
-                            </group>
-                            <group string="Capacidad NAP">
-                                <field name="capacity_nap"/>
-                                <field name="capacity_usage_nap"/>
-                            </group>
-                        </group>
-                    </sheet>
-                    <div class="oe_chatter">
-                        <field name="message_follower_ids"/>
-                        <field name="activity_ids"/>
-                        <field name="message_ids"/>
-                    </div>
-                </form>
+            </div>
+                <div class="oe_title">
+<h1>
+<field name="name" placeholder="Nombre Caja NAP" modifiers="{}"/>
+</h1>
+</div>
+<group>
+                <group string="Datos">
+                    <field name="port_splitter_secondary" modifiers="{}"/>
+                    <field name="splitter_id" readonly="1" on_change="1" can_create="true" can_write="true" modifiers="{&quot;readonly&quot;: true}"/>
+<field name="node_id" invisible="1" can_create="true" can_write="true" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
+                </group>
+                <group string="Capacidad NAP">
+                    <field name="capacity_nap" modifiers="{}"/>
+                    <field name="capacity_usage_nap" modifiers="{&quot;readonly&quot;: true}"/>
+                </group>
+            </group>
+
+<group string="Datos Ubicacion">
+<group>
+<field name="country_id" can_create="false" can_write="false" modifiers="{}"/>
+<field name="state_id" can_create="true" can_write="true" modifiers="{}"/>
+<field name="zip" modifiers="{}"/>
+</group>
+<group>
+<field name="street" modifiers="{}"/>
+<field name="street2" modifiers="{}"/>
+</group>
+</group>
+<group>
+<group string="Geolocalizacion">
+                                <label for="date_localization" string="Geolocalizacion"/>
+                                <div>
+                                    <span>Lat : </span>
+                                    <field name="gps_lat" nolabel="1" class="oe_inline" modifiers="{}"/>
+                                    <span>, Long: </span>
+                                    <field name="gps_lon" nolabel="1" class="oe_inline" modifiers="{}"/>
+                                    <br/>
+                                    <span invisible= "date_localization==False" modifiers="{&quot;invisible&quot;: [[&quot;date_localization&quot;, &quot;=&quot;, false]]}">Actualizado el: </span>
+                                    <field name="date_localization" nolabel="1" class="oe_inline" modifiers="{}"/>
+                                </div>
+                    </group>
+<group name="vlan_port" string="Vlan Administrativa" invisible="is_line_nap==False" modifiers="{&quot;invisible&quot;: [[&quot;is_line_nap&quot;, &quot;=&quot;, false]]}">
+<field name="s_vlan" modifiers="{}"/>
+<field name="c_vlan" modifiers="{}"/>
+</group>
+</group>
+
+<group name="ip_address" string="Direccionamiento IP">
+<group>
+<field name="type_access_net" modifiers="{}"/>
+<field name="is_line_nap" invisible="1" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
+</group>
+<group>
+<field name="dhcp_custom_server" invisible="type_access_net!='dhcp_leases'" modifiers="{&quot;invisible&quot;: [[&quot;type_access_net&quot;, &quot;!=&quot;, &quot;dhcp_leases&quot;]]}"/>
+</group>
+</group>
+<group name="box_net_ro_1" string="Network Router">
+<group>
+<field name="dhcp_client" widget="boolean_toggle" modifiers="{}"/>
+<field name="pri_onu_standar" invisible="dhcp_client==False" modifiers="{&quot;invisible&quot;: [[&quot;dhcp_client&quot;, &quot;=&quot;, false]]}"/>
+<field name="pri_onu_bridge" invisible="dhcp_client==False" modifiers="{&quot;invisible&quot;: [[&quot;dhcp_client&quot;, &quot;=&quot;, false]]}"/>
+</group>
+<group>
+</group>
+</group>
+
+<notebook>
+<page string="Series Onu">
+<group>
+<field name="onu_ids_isp" nolabel="1" modifiers="{}">
+</field>
+</group>
+</page>
+</notebook>
+  </sheet>
+  <div class="o_attachment_preview"/>
+<div class="oe_chatter">
+<field name="message_follower_ids" modifiers="{}"/>
+<field name="activity_ids" modifiers="{}"/>
+<field name="message_ids" modifiers="{}"/>
+</div>
+</form>
             </field>
         </record>
     </data>
